<resources>
    <string name="app_name">Workout</string>
    <string name="graph_progress">Graph Progress</string>
    <string name="create_workout">Create Workout</string>
    <string name="title_activity_exercise">exercise</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="repetitions">Repetitions</string>
    <string name="button">Button</string>
    <string name="sets">Sets</string>
    <string name="name">Name</string>
    <string name="create_exercise">Create Exercise</string>
</resources>
